--- a/Nostalgia/Base.lproj/Main.storyboard
+++ b/Nostalgia/Base.lproj/Main.storyboard
@@ -101,10 +101,24 @@
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ncb-Iv-K3Y">
                             <size key="itemSize" width="100" height="100"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="50" height="120"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells/>
+                        <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FooterView" id="WPr-Rf-XYV">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIcon-1.png" translatesAutoresizingMaskIntoConstraints="NO" id="qCO-Ls-SEi">
+                                    <rect key="frame" x="120" y="20" width="80" height="80"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </imageView>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="centerY" secondItem="qCO-Ls-SEi" secondAttribute="centerY" id="A20-kB-t2S"/>
+                                <constraint firstAttribute="centerX" secondItem="qCO-Ls-SEi" secondAttribute="centerX" id="e5n-ob-Hf4"/>
+                            </constraints>
+                        </collectionReusableView>
                         <connections>
                             <outlet property="dataSource" destination="eO5-i4-Fyw" id="mbW-cX-dw0"/>
                             <outlet property="delegate" destination="eO5-i4-Fyw" id="3n7-p9-UL3"/>
@@ -568,6 +582,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
     </scenes>
     <resources>
         <image name="767-photo-1-gray.png" width="28" height="23"/>
+        <image name="AppIcon-1.png" width="80" height="80"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
